kuberconfig/dm-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drone-management
  template:
    metadata:
      labels:
        app: drone-management
    spec:
      containers:
        - name: drone-management
          image: avdeevilia/drone-management:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 8888
