kuberconfig/db-service.yml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: postgresdb
  annotations:
    kubesphere.io/creator: Ilia Avdeev
  labels:
    app: postgresdb
spec:
  # Choose how to expose your service
  type: NodePort
  ports:
    # The port number to expose the service
    - port: 5432
  # Pod to route service traffic
  selector:
    app: postgresdb
