kuberconfig/dm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: drone-management
  labels:
    app: drone-management
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8888
  selector:
    app: drone-management
