kuberconfig/dm-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project-base-cloud-devops-6
  name: drone-management-ingress
  annotations:
    kubesphere.io/creator: Ilia Avdeev
spec:
  rules:
  - host: k8s-mgmt.dfcloud.ru
    http:
      paths:
        - path: /droneManagement
          backend:
            service:
              name: drone-management
              port:
                number: 8000
          pathType: ImplementationSpecific
